сделала десктопную версию программы питания

--- a/source/index.html
+++ b/source/index.html
@@ -63,15 +63,13 @@
           <li class="program-type-list__item">
             <h3 class="program-type-list__slim">похудение</h3>
             <p class="program-type-list__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
-              деревьям?
-              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="program-type-list__link" href="catalog.html#slim">каталог slim</a>
           </li>
           <li class="program-type-list__item">
             <h3 class="program-type-list__pro">набор массы</h3>
             <p class="program-type-list__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
-              Energy
-              Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="program-type-list__link" href="catalog.html#pro">каталог pro</a>
           </li>
         </ul>
