--- a/source/index.html
+++ b/source/index.html
@@ -24,19 +24,17 @@
     </a>
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list site-list-index">
-          <li class="site-list__item site-list__item--current">
-            <a>главная</a>
-          </li>
-          <li class="site-list__item">
-            <a href="catalog.html">каталог продукции</a>
-          </li>
-          <li class="site-list__item">
-            <a href="form.html">подбор программы</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="main-nav__list site-list site-list-index">
+        <li class="site-list__item site-list__item--current">
+          <a>главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="catalog.html">каталог продукции</a>
+        </li>
+        <li class="site-list__item">
+          <a href="form.html">подбор программы</a>
+        </li>
+      </ul>
     </nav>
   </header>
 
@@ -100,56 +98,59 @@
     </section>
     <article class="demonstration">
       <h2 class="demonstration__title">Живой пример</h2>
-      <p class="demonstration__text">Борис сбросил 5кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-        Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит 16
-        часов
-        в день.</p>
       <div class="demonstration__wrapper">
-        <ul class="demonstration__data data-list">
-          <li class="data-list__item">
-            <div class="data-list__number-wrapper">
-              <b class="data-list__number">5 кг</b>
-            </div>
-            <p class="data-list__text data-list__text--slim">снижение веса</p>
-          </li>
-          <li class="data-list__item">
-            <div class="data-list__number-wrapper">
-              <b class="data-list__number">60 дней</b>
-            </div>
-            <p class="data-list__text data-list__text--waste-time">затрачено времени</p>
-          </li>
-        </ul>
-        <p class="demonstration__conclusion">затраты на питание: 15 000 руб.</p>
-      </div>
-      <div class="demonstation__slider">
-        <ul class="demonstration__list slider__list">
-          <li class="demonstration__item demonstration__item--before slider__item">
-            <div class="demonstation__slider demonstation__slider--before">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
-                <img class="demonstration__image demonstration__image--before" src="img/before-mobile@1x.png"
-                  srcset="img/before-mobile@2x.png 2x" alt="фото кота до приема Кэт Энерджи">
-              </picture>
-            </div>
-          </li>
-          <!--<li class="demonstration__item demonstration__item--after slider__item">
-            <div class="demonstation__slider demonstation__slider--after">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
-                <img class="demonstration__image demonstration__image--after" src="img/after-mobile@1x.png"
-                  srcset="img/after-mobile@2x.png 2x" alt="фото кота до приема Кэт Энерджи">
-              </picture>
-            </div>
-          </li>
-        </ul>-->
+        <div class="demonstration__wrapper-text">
+          <p class="demonstration__text">Борис сбросил 5кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит 16
+            часов в день.</p>
+          <div class="demonstration__wrapper-data">
+            <ul class="demonstration__data data-list">
+              <li class="data-list__item">
+                <div class="data-list__number-wrapper">
+                  <b class="data-list__number">5 кг</b>
+                </div>
+                <p class="data-list__text data-list__text--slim">снижение веса</p>
+              </li>
+              <li class="data-list__item">
+                <div class="data-list__number-wrapper">
+                  <b class="data-list__number">60 дней</b>
+                </div>
+                <p class="data-list__text data-list__text--waste-time">затрачено времени</p>
+              </li>
+            </ul>
+            <p class="demonstration__conclusion">затраты на питание: 15 000 руб.</p>
+          </div>
+        </div>
+        <div class="demonstation__slider">
+          <ul class="demonstration__list slider__list">
+            <li class="demonstration__item demonstration__item--before slider__item">
+              <div class="demonstation__slider demonstation__slider--before">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
+                  <img class="demonstration__image demonstration__image--before" src="img/before-mobile@1x.png"
+                    srcset="img/before-mobile@2x.png 2x" alt="фото кота до приема Кэт Энерджи">
+                </picture>
+              </div>
+            </li>
+            <!--<li class="demonstration__item demonstration__item--after slider__item">
+                        <div class="demonstation__slider demonstation__slider--after">
+                          <picture>
+                            <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                            <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
+                            <img class="demonstration__image demonstration__image--after" src="img/after-mobile@1x.png"
+                              srcset="img/after-mobile@2x.png 2x" alt="фото кота до приема Кэт Энерджи">
+                          </picture>
+                        </div>
+                      </li>-->
+          </ul>
           <p class="demonstration__toggles slider__toggles">
             <button class="slider__toggle" type="button"
               aria-label="Переход к фотографии кота до приема Кэт Энерджи">Было</button>
             <button class="slider__toggle" type="button"
               aria-label="Переход к фотографии кота после приема Кэт Энерджи">Стало</button>
           </p>
+        </div>
       </div>
     </article>
     <section class="contact-us">
