доделала десктопную версию главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -101,7 +101,8 @@
       <div class="demonstration__wrapper">
         <div class="demonstration__wrapper-text">
           <p class="demonstration__text">Борис сбросил 5кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит 16
+            Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит
+            16
             часов в день.</p>
           <div class="demonstration__wrapper-data">
             <ul class="demonstration__data data-list">
@@ -118,7 +119,7 @@
                 <p class="data-list__text data-list__text--waste-time">затрачено времени</p>
               </li>
             </ul>
-            <p class="demonstration__conclusion">затраты на питание: 15 000 руб.</p>
+            <p class="demonstration__conclusion"><span>затраты на питание:</span> 15 000 руб.</p>
           </div>
         </div>
         <div class="demonstation__slider">
@@ -126,7 +127,8 @@
             <li class="demonstration__item demonstration__item--before slider__item">
               <div class="demonstation__slider demonstation__slider--before">
                 <picture>
-                  <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
                   <img class="demonstration__image demonstration__image--before" src="img/before-mobile@1x.png"
                     srcset="img/before-mobile@2x.png 2x" alt="фото кота до приема Кэт Энерджи">
@@ -161,12 +163,12 @@
         </div>
         <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
           <!--<div style="position:relative;overflow:hidden;"><a
-              href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
-              style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a
-              href="https://yandex.ru/maps/2/saint-petersburg/?clid=2254922&ll=30.322740%2C59.938534&utm_medium=mapframe&utm_source=maps&z=19"
-              style="color:#eee;font-size:12px;position:absolute;top:14px;">Санкт‑Петербург — Яндекс.Карты</a><iframe
-              src="https://yandex.ru/map-widget/v1/-/CSVTJXm-" width="560" height="400" frameborder="1"
-              allowfullscreen="true" style="position:relative;"></iframe></div>-->
+                      href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
+                      style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a
+                      href="https://yandex.ru/maps/2/saint-petersburg/?clid=2254922&ll=30.322740%2C59.938534&utm_medium=mapframe&utm_source=maps&z=19"
+                      style="color:#eee;font-size:12px;position:absolute;top:14px;">Санкт‑Петербург — Яндекс.Карты</a><iframe
+                      src="https://yandex.ru/map-widget/v1/-/CSVTJXm-" width="560" height="400" frameborder="1"
+                      allowfullscreen="true" style="position:relative;"></iframe></div>-->
           <p>
             <picture>
               <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
