--- a/source/catalog.html
+++ b/source/catalog.html
@@ -50,9 +50,21 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a href="chicken-small.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x,
+                    img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x,
+                    img/chicken-small-tablet@2x.png 2x">
+                  <img class="main-products-list__chicken-small" src="img/chicken-small-mobile@1x.jpg"
+                    srcset="img/chicken-small-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
+                </picture>
+              </a>
+
+              <!--<a href="chicken-small.html">
                 <img class="main-products-list__chicken-small" src="img/chicken-small-mobile@1x.jpg" width="140"
                   height="144" alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
-              </a>
+              </a>-->
             </div>
             <div class="main-products-list__info" id="pro">
               <a class="main-products-list__link" href="chicken-small.html">
@@ -83,13 +95,22 @@
             <div class="main-products-list__image">
               <a href="chicken-big.html">
                 <picture>
-                  <source media="(min-width: 1300px)"
-                    srcset="img/chicken-big-desktop@1x.jpg 1x, img/chicken-big-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/chicken-big-tablet@1x.jpg 1x, img/chicken-big-tablet@2x.jpg 2x">
+                  <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x,
+                    img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x,
+                    img/chicken-big-tablet@2x.png 2x">
                   <img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg"
-                    srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Рекламный образец продукции компании Кэт энерджи">
+                    srcset="img/chicken-big-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
                 </picture>
+                <!--<picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
+                  <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+                    alt="Рекламный образец продукции компании Кэт энерджи">
+                </picture>-->
                 <!--<img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg" width="140"
                   height="144" alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">-->
               </a>
