--- a/source/catalog.html
+++ b/source/catalog.html
@@ -48,7 +48,7 @@
       <ul class="main-products__list main-products-list">
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--chicken-small">
               <a href="chicken-small.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x,
@@ -60,34 +60,33 @@
                     alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
                 </picture>
               </a>
-
-              <!--<a href="chicken-small.html">
-                <img class="main-products-list__chicken-small" src="img/chicken-small-mobile@1x.jpg" width="140"
-                  height="144" alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
-              </a>-->
             </div>
-            <div class="main-products-list__info" id="pro">
-              <a class="main-products-list__link" href="chicken-small.html">
-                <h3 class="main-products-list__item-title">cat energy<br> pro 500 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>500 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Курица</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>700 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper main-products-list__info-wrapper--chicken-small">
+              <div class="main-products-list__info" id="pro">
+                <a class="main-products-list__link" href="chicken-small.html">
+                  <h3 class="main-products-list__item-title main-products-list__item-title--chicken-small">cat energy
+                    pro
+                    500 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Курица</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -103,21 +102,11 @@
                     srcset="img/chicken-big-mobile@2x.jpg 2x"
                     alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
                 </picture>
-                <!--<picture>
-                  <source media="(min-width: 1300px)"
-                    srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)"
-                    srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
-                  <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
-                    alt="Рекламный образец продукции компании Кэт энерджи">
-                </picture>-->
-                <!--<img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg" width="140"
-                  height="144" alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">-->
               </a>
             </div>
             <div class="main-products-list__info">
               <a class="main-products-list__link" href="chicken-big.html">
-                <h3 class="main-products-list__item-title">cat energy pro<br> 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
@@ -144,13 +133,20 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a href="fish-small.html">
-                <img class="main-products-list__fish-small" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x,
+                    img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x,
+                    img/fish-small-tablet@2x.png 2x">
+                  <img class="main-products-list__fish-small" src="img/fish-small-mobile@1x.jpg"
+                    srcset="img/fish-small-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
+                </picture>
               </a>
             </div>
             <div class="main-products-list__info">
               <a class="main-products-list__link" href="fish-small.html">
-                <h3 class="main-products-list__item-title">cat energy<br> pro 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 500 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
@@ -176,13 +172,20 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a class="main-products-list__link" href="fish-big.html">
-                <img class="main-products-list__fish-big" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
-                  alt="Банка питания Кэт энерджи со вкусом рыбы объемом 1000 г">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x,
+                    img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x,
+                    img/fish-big-tablet@2x.png 2x">
+                  <img class="main-products-list__fish-big" src="img/fish-big-mobile@1x.jpg"
+                    srcset="img/fish-big-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи со вкусом рыбы объемом 1000 г">
+                </picture>
               </a>
             </div>
             <div class="main-products-list__info">
               <a class="main-products-list__link" href="fish-big.html">
-                <h3 class="main-products-list__item-title">cat energy<br> pro 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
@@ -208,13 +211,20 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a href="buckwheat-small.html">
-                <img class="main-products-list__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg" width="140"
-                  height="144" alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x,
+                    img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x,
+                    img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="main-products-list__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg"
+                    srcset="img/buckwheat-small-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
+                </picture>
               </a>
             </div>
             <div class="main-products-list__info" id="slim">
               <a class="main-products-list__link" href="buckwheat-small.html">
-                <h3 class="main-products-list__item-title">cat energy<br> slim 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
@@ -240,13 +250,20 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a href="buckwheat-big.html">
-                <img class="main-products-list__buckwheat-big" src="img/buckwheat-big-mobile@1x.png" width="140"
-                  height="144" alt="Банка питания Кэт энерджи со вкусом гречки объемом 1000 г">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x,
+                    img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x,
+                    img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="main-products-list__buckwheat-big" src="img/buckwheat-big-mobile@1x.png"
+                    srcset="img/buckwheat-big-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи со вкусом гречки объемом 1000 г">
+                </picture>
               </a>
             </div>
             <div class="main-products-list__info">
               <a class="main-products-list__link" href="buckwheat-big.html">
-                <h3 class="main-products-list__item-title">cat energy<br> slim 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 1000 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
@@ -272,13 +289,20 @@
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image">
               <a href="rice-small.html">
-                <img class="main-products-list__rice-small" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
-                  alt="Банка питания Кэт энерджи со вкусом риса объемом 500 г">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x,
+                    img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x,
+                    img/rice-small-tablet@2x.png 2x">
+                  <img class="main-products-list__rice-small" src="img/rice-small-mobile@1x.jpg"
+                    srcset="img/rice-small-mobile@2x.jpg 2x"
+                    alt="Банка питания Кэт энерджи со вкусом риса объемом 500 г">
+                </picture>
               </a>
             </div>
             <div class="main-products-list__info">
               <a class="main-products-list__link" href="rice-small.html">
-                <h3 class="main-products-list__item-title">cat energy<br> slim 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
               </a>
               <table class="main-products-list__data">
                 <tr>
