продолжала верстку карточек товаров на планшетной версии каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -61,7 +61,7 @@
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info-wrapper main-products-list__info-wrapper--chicken-small">
+            <div class="main-products-list__info-wrapper">
               <div class="main-products-list__info" id="pro">
                 <a class="main-products-list__link" href="chicken-small.html">
                   <h3 class="main-products-list__item-title main-products-list__item-title--chicken-small">cat energy
@@ -91,164 +91,173 @@
         </li>
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
-              <a href="chicken-big.html">
-                <picture>
-                  <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x,
-                    img/chicken-big-desktop@2x.png 2x">
-                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x,
-                    img/chicken-big-tablet@2x.png 2x">
-                  <img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg"
-                    srcset="img/chicken-big-mobile@2x.jpg 2x"
-                    alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
-                </picture>
+            <div class="main-products-list__image main-products-list__image--chicken-big"">
+              <a href=" chicken-big.html">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x,
+                                img/chicken-big-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x,
+                                img/chicken-big-tablet@2x.png 2x">
+                <img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg"
+                  srcset="img/chicken-big-mobile@2x.jpg 2x"
+                  alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
+              </picture>
               </a>
             </div>
-            <div class="main-products-list__info">
-              <a class="main-products-list__link" href="chicken-big.html">
-                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>1000 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Курица</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>1000 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info" id="pro">
+                <a class="main-products-list__link" href="chicken-small.html">
+                  <h3 class="main-products-list__item-title main-products-list__item-title--chicken-big">cat energy
+                    pro
+                    1000 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Курица</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-          </div>
           </div>
         </li>
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--fish-small">
               <a href="fish-small.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x,
-                    img/fish-small-desktop@2x.png 2x">
+                                                      img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x,
-                    img/fish-small-tablet@2x.png 2x">
+                                                      img/fish-small-tablet@2x.png 2x">
                   <img class="main-products-list__fish-small" src="img/fish-small-mobile@1x.jpg"
                     srcset="img/fish-small-mobile@2x.jpg 2x"
                     alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info">
-              <a class="main-products-list__link" href="fish-small.html">
-                <h3 class="main-products-list__item-title">cat energy pro 500 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>500 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Рыба</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>700 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info">
+                <a class="main-products-list__link" href="fish-small.html">
+                  <h3 class="main-products-list__item-title">cat energy pro 500 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--fish-big">
               <a class="main-products-list__link" href="fish-big.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x,
-                    img/fish-big-desktop@2x.png 2x">
+                                img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x,
-                    img/fish-big-tablet@2x.png 2x">
+                                img/fish-big-tablet@2x.png 2x">
                   <img class="main-products-list__fish-big" src="img/fish-big-mobile@1x.jpg"
                     srcset="img/fish-big-mobile@2x.jpg 2x"
                     alt="Банка питания Кэт энерджи со вкусом рыбы объемом 1000 г">
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info">
-              <a class="main-products-list__link" href="fish-big.html">
-                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>1000 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Рыба</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>1000 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info">
+                <a class="main-products-list__link" href="fish-big.html">
+                  <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рыба</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>1000 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--buckwheat-small">
               <a href="buckwheat-small.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x,
-                    img/buckwheat-small-desktop@2x.png 2x">
+                                              img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x,
-                    img/buckwheat-small-tablet@2x.png 2x">
+                                              img/buckwheat-small-tablet@2x.png 2x">
                   <img class="main-products-list__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg"
                     srcset="img/buckwheat-small-mobile@2x.jpg 2x"
                     alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info" id="slim">
-              <a class="main-products-list__link" href="buckwheat-small.html">
-                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>500 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Гречка</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>400 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info" id="slim">
+                <a class="main-products-list__link" href="buckwheat-small.html">
+                  <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>400 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--buckwheat-big">
               <a href="buckwheat-big.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x,
@@ -261,33 +270,35 @@
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info">
-              <a class="main-products-list__link" href="buckwheat-big.html">
-                <h3 class="main-products-list__item-title">cat energy slim 1000 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>1000 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Гречка</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>700 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info">
+                <a class="main-products-list__link" href="buckwheat-big.html">
+                  <h3 class="main-products-list__item-title">cat energy slim 1000 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>1000 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Гречка</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>700 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
           </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-          </div>
         </li>
-        <li class="main-products-list__item">
+        <li class="main-products-list__item main-products-list__item--rice-small">
           <div class="main-products-list__wrapper">
-            <div class="main-products-list__image">
+            <div class="main-products-list__image main-products-list__image--rice-small">
               <a href="rice-small.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x,
@@ -300,31 +311,33 @@
                 </picture>
               </a>
             </div>
-            <div class="main-products-list__info">
-              <a class="main-products-list__link" href="rice-small.html">
-                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
-              </a>
-              <table class="main-products-list__data">
-                <tr>
-                  <td>Объем</td>
-                  <td>500 г</td>
-                </tr>
-                <tr>
-                  <td>Вкус</td>
-                  <td>Рис</td>
-                </tr>
-                <tr>
-                  <td>Цена</td>
-                  <td>500 Р.</td>
-                </tr>
-              </table>
+            <div class="main-products-list__info-wrapper">
+              <div class="main-products-list__info">
+                <a class="main-products-list__link" href="rice-small.html">
+                  <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
+                </a>
+                <table class="main-products-list__data">
+                  <tr>
+                    <td>Объем</td>
+                    <td>500 г</td>
+                  </tr>
+                  <tr>
+                    <td>Вкус</td>
+                    <td>Рис</td>
+                  </tr>
+                  <tr>
+                    <td>Цена</td>
+                    <td>500 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="main-products-list__booking">
+                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
           </div>
-          <div class="main-products-list__booking">
-            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-          </div>
         </li>
-        <li class="main-products-list__item">
+        <li class="main-products-list__item  main-products-list__item--promo">
           <div class="main-products-list__info main-products__info--promo">
             <a class="main-products-list__more" href="booking.html">
               <b>показать еще 100500 товаров</b>
