верстала десктопную версию каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -214,7 +214,7 @@
             </div>
           </div>
         </li>
-        <li class="main-products-list__item">
+        <li class="main-products-list__item main-products-list__item--buckwheat-small">
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image main-products-list__image--buckwheat-small">
               <a href="buckwheat-small.html">
@@ -255,7 +255,7 @@
             </div>
           </div>
         </li>
-        <li class="main-products-list__item">
+        <li class="main-products-list__item main-products-list__item--buckwheat-big">
           <div class="main-products-list__wrapper">
             <div class="main-products-list__image main-products-list__image--buckwheat-big">
               <a href="buckwheat-big.html">
