--- a/source/catalog.html
+++ b/source/catalog.html
@@ -83,10 +83,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -126,10 +126,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -138,9 +138,9 @@
               <a href="fish-small.html">
                 <picture>
                   <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x,
-                                                      img/fish-small-desktop@2x.png 2x">
+                                                              img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x,
-                                                      img/fish-small-tablet@2x.png 2x">
+                                                              img/fish-small-tablet@2x.png 2x">
                   <img class="main-products-list__fish-small" src="img/fish-small-mobile@1x.jpg"
                     srcset="img/fish-small-mobile@2x.jpg 2x"
                     alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
@@ -167,10 +167,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -208,10 +208,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item main-products-list__item--buckwheat-small">
@@ -249,10 +249,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item main-products-list__item--buckwheat-big">
@@ -290,10 +290,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item main-products-list__item--rice-small">
@@ -331,10 +331,10 @@
                   </tr>
                 </table>
               </div>
-              <div class="main-products-list__booking">
-                <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
-              </div>
             </div>
+          </div>
+          <div class="main-products-list__booking">
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item  main-products-list__item--promo">
@@ -352,102 +352,105 @@
     </section>
     <section class="additional-products">
       <h2 class="additional-products__title">Дополнительные товары</h2>
-      <ul class="additional-products__list additional-products-list">
-        <li class="additional-products-list__item">
-          <div class="additional-products-list__wrapper">
-            <div class="additional-products-list__info">
-              <a href="sweetener.html">
-                <h3 class="additional-products-list__item-title">сахарозаменитель</h3>
-              </a>
-              <table class="additional-products-list__data">
-                <tr>
-                  <td>1 упаковка (100 г)</td>
-                  <td>200 Р.</td>
-                </tr>
-              </table>
+      <div class="additional-products__wrapper">
+        <ul class="additional-products__list additional-products-list">
+          <li class="additional-products-list__item">
+            <div class="additional-products-list__wrapper">
+              <div class="additional-products-list__info">
+                <a href="sweetener.html">
+                  <h3 class="additional-products-list__item-title">сахарозаменитель</h3>
+                </a>
+                <table class="additional-products-list__data">
+                  <tr>
+                    <td>1 упаковка (100 г)</td>
+                    <td>200 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="additional-products-list__booking">
+                <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="additional-products-list__booking">
-            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
-          </div>
-        </li>
-        <li class="additional-products-list__item">
-          <div class="additional-products-list__wrapper">
-            <div class="additional-products-list__info">
-              <a href="potable-water.html">
-                <h3 class="additional-products-list__item-title">питьевая вода</h3>
-              </a>
-              <table class="additional-products-list__data">
-                <tr>
-                  <td>5 литров</td>
-                  <td>50 Р.</td>
-                </tr>
-              </table>
+          </li>
+          <li class="additional-products-list__item">
+            <div class="additional-products-list__wrapper">
+              <div class="additional-products-list__info">
+                <a class="additional-products-list__link" href="potable-water.html">
+                  <h3 class="additional-products-list__item-title additional-products-list__item-title--water">питьевая
+                    вода</h3>
+                </a>
+                <table class="additional-products-list__data">
+                  <tr>
+                    <td>5 литров</td>
+                    <td>50 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="additional-products-list__booking">
+                <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="additional-products-list__booking">
-            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
-          </div>
-        </li>
-        <li class="additional-products-list__item">
-          <div class="additional-products-list__wrapper">
-            <div class="additional-products-list__info">
-              <a href="milk.html">
-                <h3 class="additional-products-list__item-title">молоко</h3>
-              </a>
-              <table class="additional-products-list__data">
-                <tr>
-                  <td>1 литр</td>
-                  <td>100 Р.</td>
-                </tr>
-              </table>
+          </li>
+          <li class="additional-products-list__item">
+            <div class="additional-products-list__wrapper">
+              <div class="additional-products-list__info">
+                <a href="milk.html">
+                  <h3 class="additional-products-list__item-title">молоко</h3>
+                </a>
+                <table class="additional-products-list__data">
+                  <tr>
+                    <td>1 литр</td>
+                    <td>100 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="additional-products-list__booking">
+                <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="additional-products-list__booking">
-            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
-          </div>
-        </li>
-        <li class="additional-products-list__item">
-          <div class="additional-products-list__wrapper">
-            <div class="additional-products-list__info">
-              <a href="vitamins.html">
-                <h3 class="additional-products-list__item-title">витамины</h3>
-              </a>
-              <table class="additional-products-list__data">
-                <tr>
-                  <td>1 упаковка (30 г)</td>
-                  <td>300 Р.</td>
-                </tr>
-              </table>
+          </li>
+          <li class="additional-products-list__item">
+            <div class="additional-products-list__wrapper">
+              <div class="additional-products-list__info">
+                <a href="vitamins.html">
+                  <h3 class="additional-products-list__item-title">витамины</h3>
+                </a>
+                <table class="additional-products-list__data">
+                  <tr>
+                    <td>1 упаковка (30 г)</td>
+                    <td>300 Р.</td>
+                  </tr>
+                </table>
+              </div>
+              <div class="additional-products-list__booking">
+                <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
+              </div>
             </div>
-          </div>
-          <div class="additional-products-list__booking">
-            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
-          </div>
-        </li>
-      </ul>
-    </section>
-    <section class="promotion">
-      <p class="promotion__gift">
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
-        <svg class="promotion__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="56" height="61" viewBox="0 0 55.5 60"
-          style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
-          <path d="M52.3,12.2h-7c0.5-0.7,0.8-1.4,1.1-2.2c0.6-2,0.4-4.1-0.6-5.9c-1-1.8-2.6-3.1-4.6-3.7c-2-0.6-4.1-0.4-5.9,0.6
-                                  c-3.6,2-6.2,6.1-7.6,9c-1.4-2.9-4-7.1-7.6-9c-3.8-2-8.5-0.6-10.5,3.1c-1.4,2.7-1.2,5.8,0.5,8.1h-7c-1.7,0-3.1,1.4-3.1,3.1v9.4
-                                  c0,1.7,1.4,3.1,3.1,3.1H4v26.1c0,3.3,2.7,6,6,6h35.5c3.3,0,6-2.7,6-6V27.8h0.8c1.7,0,3.1-1.4,3.1-3.1v-9.4
-                                  C55.5,13.6,54.1,12.2,52.3,12.2z M36.5,3c1.3-0.7,2.7-0.8,4.1-0.4C41.9,3,43,3.9,43.7,5.2c0.7,1.3,0.8,2.7,0.4,4.1
-                                  c-0.4,1.2-1.1,2.2-2.2,2.9H29.4C30.5,9.6,33,5,36.5,3z M11.7,5.2C13.2,2.6,16.4,1.6,19,3c3.5,1.9,6,6.6,7.1,9.1H13.5
-                                  C11.2,10.7,10.4,7.6,11.7,5.2z M26.5,27.8v13.7H6.4V27.8H26.5z M6.4,53.9v-10h20.2v13.7H10C8,57.6,6.4,55.9,6.4,53.9z M45.5,57.6
-                                  H28.9V43.9h20.2v10C49.1,55.9,47.5,57.6,45.5,57.6z M49.1,41.5H28.9V27.8h20.2V41.5z M53.1,24.7c0,0.4-0.3,0.7-0.7,0.7h-2
-                                  c0,0,0,0,0,0s0,0,0,0H27.7c0,0,0,0,0,0s0,0,0,0H5.2c0,0,0,0,0,0s0,0,0,0h-2c-0.4,0-0.7-0.3-0.7-0.7v-9.4c0-0.4,0.3-0.7,0.7-0.7h49.2
-                                  c0.4,0,0.7,0.3,0.7,0.7V24.7z" />
-        </svg>
-      </p>
-      <a class="promotion__link" href="booking.html">
-        Закажите все и&nbsp;получите чехол&nbsp;для кота в подарок!
-      </a>
+          </li>
+        </ul>
+        <div class="promotion">
+          <p class="promotion__gift">
+            <?xml version="1.0" encoding="utf-8"?>
+            <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
+            <svg class="promotion__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="56" height="61" viewBox="0 0 55.5 60"
+              style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
+              <path d="M52.3,12.2h-7c0.5-0.7,0.8-1.4,1.1-2.2c0.6-2,0.4-4.1-0.6-5.9c-1-1.8-2.6-3.1-4.6-3.7c-2-0.6-4.1-0.4-5.9,0.6
+                                                      c-3.6,2-6.2,6.1-7.6,9c-1.4-2.9-4-7.1-7.6-9c-3.8-2-8.5-0.6-10.5,3.1c-1.4,2.7-1.2,5.8,0.5,8.1h-7c-1.7,0-3.1,1.4-3.1,3.1v9.4
+                                                      c0,1.7,1.4,3.1,3.1,3.1H4v26.1c0,3.3,2.7,6,6,6h35.5c3.3,0,6-2.7,6-6V27.8h0.8c1.7,0,3.1-1.4,3.1-3.1v-9.4
+                                                      C55.5,13.6,54.1,12.2,52.3,12.2z M36.5,3c1.3-0.7,2.7-0.8,4.1-0.4C41.9,3,43,3.9,43.7,5.2c0.7,1.3,0.8,2.7,0.4,4.1
+                                                      c-0.4,1.2-1.1,2.2-2.2,2.9H29.4C30.5,9.6,33,5,36.5,3z M11.7,5.2C13.2,2.6,16.4,1.6,19,3c3.5,1.9,6,6.6,7.1,9.1H13.5
+                                                      C11.2,10.7,10.4,7.6,11.7,5.2z M26.5,27.8v13.7H6.4V27.8H26.5z M6.4,53.9v-10h20.2v13.7H10C8,57.6,6.4,55.9,6.4,53.9z M45.5,57.6
+                                                      H28.9V43.9h20.2v10C49.1,55.9,47.5,57.6,45.5,57.6z M49.1,41.5H28.9V27.8h20.2V41.5z M53.1,24.7c0,0.4-0.3,0.7-0.7,0.7h-2
+                                                      c0,0,0,0,0,0s0,0,0,0H27.7c0,0,0,0,0,0s0,0,0,0H5.2c0,0,0,0,0,0s0,0,0,0h-2c-0.4,0-0.7-0.3-0.7-0.7v-9.4c0-0.4,0.3-0.7,0.7-0.7h49.2
+                                                      c0.4,0,0.7,0.3,0.7,0.7V24.7z" />
+            </svg>
+          </p>
+          <a class="promotion__link" href="booking.html">
+            Закажите все и&nbsp;получите чехол&nbsp;для кота в подарок!
+          </a>
+        </div>
+      </div>
     </section>
     <section class="contact-us contact-us--catalog">
       <div class="contact-us__wrapper">
