стилизовала первые два блока планшетной версии формы

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
     </nav>
   </header>
   <main class=" page-main">
-            <h1 class="page-main__title">Подбор программы</h1>
+            <h1 class="page-main__title page-main__title--form">Подбор программы</h1>
             <p class="page-main__call-to-action">Заполните анкету и мы подберем программу питания для вашего кота</p>
             <form class="feedback" method="get" action="https://echo.htmlacademy.ru">
               <fieldset class="feedback__cat-data cat-data">
