стилизоала планшетную версию формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -452,7 +452,7 @@
         </div>
       </div>
     </section>
-    <section class="contact-us contact-us--catalog">
+    <section class="contact-us contact-us--inner">
       <div class="contact-us__wrapper">
         <div class="contact-us__text">
           <p class="contact-us__slogan">приглашаем к сотрудничеству дилеров!</p>
