--- a/source/form.html
+++ b/source/form.html
@@ -85,7 +85,7 @@
                 </ul>
               </fieldset>
               <fieldset class="feedback__contacts-request contacts-request">
-                <legend class="contacts-request__legend">Контактные данные<br> (владельца кота)</legend>
+                <legend class="contacts-request__legend">Контактные данные (владельца кота)</legend>
                 <div class="contacts-request__wrapper">
                   <div class="contacts-request__email">
                     <label class="contacts-request__label contacts-request__label--email"
@@ -121,18 +121,18 @@
                   </div>
                 </div>
               </fieldset>
-              <fieldset class="feedback__cat-habits cat-habits">
-                <legend class="cat-habits__legend">Комментарий</legend>
-                <div class="cat-habits__story">
-                  <label class="cat-habits__label visually-hidden" for="field">Ваш комментарий</label>
-                  <textarea class="cat-habits__textfield" name="field" id="field" type="text" rows="6"
+              <fieldset class="feedback__comment comment">
+                <legend class="comment__legend">Комментарий</legend>
+                <div class="comment__story">
+                  <label class="comment__label visually-hidden" for="field">Ваш комментарий</label>
+                  <textarea class="comment__textfield" name="field" id="field" type="text" rows="6"
                     placeholder="расскажите обо всех повадках кота"></textarea>
                 </div>
               </fieldset>
               <fieldset class="feedback__addition addition">
                 <legend class="addition__legend">Дополнительно</legend>
                 <ul class="addition__list addition-list">
-                  <li class="addition-list__option" tabindex="0">
+                  <li class="addition-list__option addition-list__option--sweetener" tabindex="0">
                     <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
                       value="sweetener" id="sweetener" checked="">
                     <label class="addition-list__label addition-list__label--sweetener"
@@ -150,7 +150,7 @@
                       id="milk">
                     <label class="addition-list__label addition-list__label--milk" for="milk">молоко</label>
                   </li>
-                  <li class="addition-list__option" tabindex="0">
+                  <li class="addition-list__option addition-list__option--vitamins" tabindex="0">
                     <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox" value="vitamins"
                       id="vitamins">
                     <label class="addition-list__label addition-list__label--vitamins" for="red-rocks">витамины</label>
@@ -162,7 +162,7 @@
                 <p class="feedback__note">&ast; &ndash; обязательные поля</p>
               </div>
             </form>
-            <section class="contact-us">
+            <section class="contact-us contact-us--inner">
               <div class="contact-us__wrapper">
                 <div class="contact-us__text">
                   <p class="contact-us__slogan">приглашаем к сотрудничеству дилеров!</p>
