внесла исправления в планшетную версию формы

--- a/source/form.html
+++ b/source/form.html
@@ -162,9 +162,9 @@
                 <p class="feedback__note">&ast; &ndash; обязательные поля</p>
               </div>
             </form>
-            <section class="contact-us contact-us--inner">
+            <section class="contact-us">
               <div class="contact-us__wrapper">
-                <div class="contact-us__text">
+                <div class="contact-us__text contact-us__text--inner">
                   <p class="contact-us__slogan">приглашаем к сотрудничеству дилеров!</p>
                   <address class="contact-us__address"><span>ул. Большая Конюшенная, д. 19/8</span> Санкт-Петербург
                   </address>
