доделала стилизацию десктопной версии формы

--- a/source/form.html
+++ b/source/form.html
@@ -66,18 +66,18 @@
                   <legend class="program-selection__legend visually-hidden">Какая именно программа необходима коту?
                   </legend>
                   <ul class="program-selection__list selection-list">
-                    <li class="selection-list__option" tabindex="0">
+                    <li class="selection-list__option selection-list__option--slim" tabindex="0">
                       <input class="selection-list__input visually-hidden" type="radio" name="radio" value="slim"
                         id="slim" checked="">
                       <label class="selection-list__label selection-list__label--slim" for="slim">похудение</label>
                     </li>
-                    <li class="selection-list__option" tabindex="0">
+                    <li class="selection-list__option selection-list__option--weight-gain" tabindex="0">
                       <input class="selection-list__input visually-hidden" type="radio" name="radio" value="weight-gain"
                         id="weight-gain">
                       <label class="selection-list__label selection-list__label--weight-gain" for="weight-gain">набор
                         массы</label>
                     </li>
-                    <li class="selection-list__option" tabindex="0">
+                    <li class="selection-list__option selection-list__option--need-advice" tabindex="0">
                       <input class="selection-list__input visually-hidden" type="radio" name="radio" value="need-advice"
                         id="need-advice">
                       <label class="selection-list__label selection-list__label--need-advice" for="need-advice">не знаю
