--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
     <include src="build/img/sprite.svg"></include>
   </div>
 
-  <div style="display:none">
+  <!--<div style="display:none">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <symbol id="icon-cat-pro" viewBox="0 0 134 56">
         <g>
@@ -173,7 +173,7 @@
 	c0-0.2,0-2,1.2-2.3C13.5,8.3,13.7,8.3,13.7,8.3z"></path>
       </symbol>
     </svg>
-  </div>
+  </div>-->
 
   <!--<svg style="display:none">
     <symbol viewBox="0 0 22 12" id="icon-vk">
